--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="app">
+    <div id="app">
         <header class="nav">
             <a href="#" class="logo">Augusto Rosa</a>
             <nav class="navbar">
@@ -27,72 +27,92 @@
                     <h5 class="row-1-escrito-titulo">Prazer meu nome é Augusto</h5>
                     <p class="row-1-escrito-subtitulo">Desenvolvedor Front-End</p>
                     <a href="#" class="row-1-escrito-btn">Contato /></a>
-                    <a href="#" class="row-1-escrito-logos"><img src="./img/github.png" alt="Github"></a>
-                    <a href="#" class="row-1-escrito-logos"><img src="./img/instagram.png" alt="Github"></a>
-                    <a href="#" class="row-1-escrito-logos"><img src="./img/linkedin.png" alt="Github"></a>
+                    <div class="row-1-escrito-icones">
+                        <a href="#"><img src="./img/github.png" alt="Github" height="50"></a>
+                        <a href="#"><img src="./img/instagram.png" alt="Github" height="50"></a>
+                        <a href="#"><img src="./img/linkedin.png" alt="Github" height="50"></a>
+                    </div>
                 </div>
                 <img class="row-1-escrito-img" src="./img/logo.png" alt="Logo">
             </section>
-            <section>
-                <div>
-                    <h1>Sobre mim</h1>
-                </div>
-                <div>
-                    <hr>
-                </div>
-                <div>
-                    <a href=""><i class="ph ph-file-html"></i></a>
-                    <a href=""><i class="ph ph-file-css "></i></a>
-                    <a href=""><i class="ph ph-file-js"></i></a>
-                    <a href=""><i class="ph ph-file-js"></i></a>
-                </div>
-                <div>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi explicabo nisi deleniti, placeat
-                    unde enim. Distinctio eaque, fugiat sit voluptatum consequatur optio, facilis repellendus reiciendis
-                    accusantium ex mollitia, animi molestias!
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur sunt veniam blanditiis amet
-                    delectus dolorum. Qui, voluptatem officiis velit laboriosam quia possimus in, fugit expedita eius
-                    nesciunt sed dicta minus!
-                </div>
-            </section>
-            <section>
-                <div>
-                    <h1>Projetos</h1>
-                </div>
-                <div>
-                    <hr>
-                </div>
+            <section class="row-2">
+                <div class="row-2-escrito">
+                    <h1 class="row-2-escrito-titulo">Sobre mim</h1>
 
-            </section>
-            <div class="container">
-                <div class="conteudo-1">
-
-                </div>
-                <div class="conteudo-2">
-                    <div class="sobre">
-
+                    <div class="row-2-escrito-icones">
+                        <a href="#"><img src="./img/html5.png" alt="HTML5" height="50"></a>
+                        <a href="#"><img src="./img/css3.png" alt="CSS3" height="50"></a>
+                        <a href="#"><img src="./img/javascript.png" alt="JAVASCRIPT" height="50"></a>
+                        <a href="#"><img src="./img/python.png" alt="PYTHON" height="50"></a>
                     </div>
                 </div>
-                <div class="conteudo-3">
-                    <div class="projetos">
-                        <div class="card">
-
+                <div class="row-2-subtitulo-titulo">
+                    <img class="row-2-escrito-img" src="./img/bar.png" alt="Bar" height="11" width="830">
+                    <p class="row-2-paragrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
+                        praesentium obcaecati autem quidem, magni veniam! Voluptates quia totam fugit natus est
+                        doloremque? Voluptate harum in dolores perferendis atque ipsam repellat.</p>
+                    <p class="row-2-paragrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
+                        praesentium obcaecati autem quidem, magni veniam! Voluptates quia totam fugit natus est
+                        doloremque? Voluptate harum in dolores perferendis atque ipsam repellat.</p>
+                    <p class="row-2-paragrafo">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis
+                        praesentium obcaecati autem quidem, magni veniam! Voluptates quia totam fugit natus est
+                        doloremque? Voluptate harum in dolores perferendis atque ipsam repellat.</p>
+                </div>
+            </section>
+            <section class="row-3">
+                <div class="row-3-escrito">
+                    <h1 class="row-3-escrito-titulo">Projetos</h1>
+                    <img class="row-3-escrito-img" src="./img/bar.png" alt="Bar" height="11" width="830">
+                </div>
+                <div class="row-3-card-list">
+                    <div class="row-3-cards">
+                        <div class="row-3-card">
+                            <img class="row-3-card-project" src="./img/project.png" alt="Project">
+                            <h1 class="row-3-card-tittle">EXEMPLO</h1>
+                            <p class="row-3-card-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Perferendis
+                                iure officiis delectus nostrum ex? Delectus quia, nisi aliquid odio tempora dolores
+                                sapiente
+                                distinctio ducimus ratione provident optio nihil mollitia et?</p>
+                            <button class="row-3-card-more">Saiba Mais /></button>
                         </div>
-                        <div class="card">
-
+                        <div class="row-3-card">
+                            <img class="row-3-card-project" src="./img/project.png" alt="Project">
+                            <h1 class="row-3-card-tittle">EXEMPLO</h1>
+                            <p class="row-3-card-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Perferendis
+                                iure officiis delectus nostrum ex? Delectus quia, nisi aliquid odio tempora dolores
+                                sapiente
+                                distinctio ducimus ratione provident optio nihil mollitia et?</p>
+                            <button class="row-3-card-more">Saiba Mais /></button>
                         </div>
-                        <div class="card">
-
+                        <div class="row-3-card">
+                            <img class="row-3-card-project" src="./img/project.png" alt="Project">
+                            <h1 class="row-3-card-tittle">EXEMPLO</h1>
+                            <p class="row-3-card-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Perferendis
+                                iure officiis delectus nostrum ex? Delectus quia, nisi aliquid odio tempora dolores
+                                sapiente
+                                distinctio ducimus ratione provident optio nihil mollitia et?</p>
+                            <button class="row-3-card-more">Saiba Mais /></button>
                         </div>
                     </div>
+                    <button class="row-3-card-more-project">Mais projetos /></button>
                 </div>
-            </div>
+            </section>
+
+            <section class="row-4">
+                <div class="row-4-escrito">
+                    <h1 class="row-4-escrito-titulo">Experiências</h1>
+                    <img class="row-4-escrito-img" src="./img/bar.png" alt="Bar" height="11" width="830">
+                </div>
+
         </main>
 
-        <footer class="rodape">
-            <div class="contatos">
+        <footer class="row-end">
+            <h1 class="row-end-logo">Augusto</h1>
+            <p class="row-end-copy">Todos os direitos reservados. <strong>2020 & 2023</strong></p>
 
-            </div>
         </footer>
     </div>
 </body>
