--- a/index.html
+++ b/index.html
@@ -106,7 +106,50 @@
                     <h1 class="row-4-escrito-titulo">Experiências</h1>
                     <img class="row-4-escrito-img" src="./img/bar.png" alt="Bar" height="11" width="830">
                 </div>
+                <div class="row-4-card">
+                    <img class="row-4-card-img" src="./img/codigo.jpg" alt="Codigo">
+                    <ul class="row-4-desc">
+                        <li>Hobby</li>
+                    </ul>
+                </div>
+            </section>
 
+            <section class="row-5">
+                <div class="row-5-escrito">
+                    <h1 class="row-5-escrito-titulo">Contato</h1>
+                    <img class="row-5-escrito-img" src="./img/bar.png" alt="Bar" height="11" width="830">
+                </div>
+                <div class="row-5-card">
+                    <div class="row-5-information">
+                        <p class="row-5-desc">Entre em contato atrasves dos links abaixo e solicite um orcamento agora
+                            mesmo.
+                        </p>
+                        <h1 class="row-5-title">E-mail</h1>
+                        <p class="row-5-desc">augusto.srrosa@gmail.com</p>
+                        <h1 class="row-5-title">Telefones</h1>
+                        <p class="row-5-desc">(51) 9.9920-5355</p>
+                        <div class="row-5-icons">
+                            <a href="#"><img src="./img/github.png" alt="Github" height="50"></a>
+                            <a href="#"><img src="./img/instagram.png" alt="Github" height="50"></a>
+                            <a href="#" target="_blank"><img src="./img/linkedin.png" alt="Github" height="50"></a>
+                            <a href="https://wa.me/5551999205355?text=Augusto" target="_blank"><img
+                                    src="./img/whatsapp.png" alt="WhatsApp" height="50"></a>
+                        </div>
+                    </div>
+                    <div class="row-5-form">
+                        <form action="" class="row-5-form-contat">
+                            <input class="row-5-form-input" type="text" placeholder="Nome Completo">
+                            <input class="row-5-form-input" type="email" placeholder="Seu e-mail">
+                            <input class="row-5-form-input" type="text" placeholder="Seu comentário">
+
+                            <div class="row-5-form-button-grid">
+                                <button class="row-5-form-button">Enviar /></button>
+                                <button class="row-5-form-button2">Anexar /></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="row-end">
