--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
                 </div>
                 <div class="row-5-card">
                     <div class="row-5-information">
-                        <p class="row-5-desc">Entre em contato atrasves dos links abaixo e solicite um orcamento agora
-                            mesmo.
-                        </p>
+                        <p class="row-5-desc">Entre em contato atraves dos contatos abaixo.</p>
                         <h1 class="row-5-title">E-mail</h1>
                         <p class="row-5-desc">augusto.srrosa@gmail.com</p>
                         <h1 class="row-5-title">Telefones</h1>
@@ -144,7 +142,7 @@
 
                             <div class="row-5-form-button-grid">
                                 <button class="row-5-form-button">Enviar /></button>
-                                <button class="row-5-form-button2">Anexar /></button>
+                                <button class="row-5-form-button2"><i class="ph ph-folder"></i> Anexar /></button>
                             </div>
                         </form>
                     </div>
